<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="RemoteFeedback" Id="{746c5b97-6b08-42d3-a9c6-1beebe32f68f}">
    <Declaration><![CDATA[TYPE RemoteFeedback :
STRUCT
	t				: REAL := 0.0;
	EM1500			: RemoteFeedbackStewart;
	EM8000			: RemoteFeedbackStewart;
	COMAU			: RemoteFeedbackComau;
	AT960			: RemoteFeedbackLeica;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>