<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="TxStewart" Id="{1caffa04-8f47-405b-adeb-9674471b6d92}">
    <Declaration><![CDATA[TYPE TxStewart :
STRUCT
	COUNT : DINT := 0;
	CMND : DINT := 0;
	AX : REAL := 0.0;
	AY : REAL := 0.0;
	AZ : REAL := 0.0;
	Dax : REAL := 0.0;
	Day : REAL := 0.0;
	Daz : REAL := 0.0;
	P_dot_CG : REAL := 0.0;
	Q_dot_CG : REAL := 0.0;
	R_dot_CG : REAL := 0.0;
	P_CG : REAL := 0.0;
	Q_CG : REAL := 0.0;
	R_CG : REAL := 0.0;
	Phi : REAL := 0.0;
	Theta : REAL := 0.0;
	U : REAL := 0.0;
	X_DIRECT : REAL := 0.0;
	Y_DIRECT : REAL := 0.0;
	Z_DIRECT : REAL := 0.0;
	X_CG : REAL := 0.0;
	Y_CG : REAL := 0.0;
	Z_CG : REAL := 0.0;
	Flags : REAL := 0.0;
	Bump_1 : REAL := 0.0;
	Bump_2 : REAL := 0.0;
	Bump_3 : REAL := 0.0;
	Bump_4 : REAL := 0.0;
	Bump_5 : REAL := 0.0;
	FREQ1 : REAL := 0.0;
	FREQ2 : REAL := 0.0;
	FREQ3 : REAL := 0.0;
	FREQ4 : REAL := 0.0;
	FREQ5 : REAL := 0.0;
	FREQ6 : REAL := 0.0;
	FREQ7 : REAL := 0.0;
	FREQ8 : REAL := 0.0;
	FREQ9 : REAL := 0.0;
	FREQ10 : REAL := 0.0;
	FREQ11 : REAL := 0.0;
	FREQ12 : REAL := 0.0;
	FREQ13 : REAL := 0.0;
	FREQ14 : REAL := 0.0;
	FREQ15 : REAL := 0.0;
	FREQ16 : REAL := 0.0;
	FREQ17 : REAL := 0.0;
	FREQ18 : REAL := 0.0;
	FREQ19 : REAL := 0.0;
	FREQ20 : REAL := 0.0;
	XGAIN1 : REAL := 0.0;
	XGAIN2 : REAL := 0.0;
	XGAIN3 : REAL := 0.0;
	XGAIN4 : REAL := 0.0;
	XGAIN5 : REAL := 0.0;
	XGAIN6 : REAL := 0.0;
	XGAIN7 : REAL := 0.0;
	XGAIN8 : REAL := 0.0;
	XGAIN9 : REAL := 0.0;
	XGAIN10 : REAL := 0.0;
	XGAIN11 : REAL := 0.0;
	XGAIN12 : REAL := 0.0;
	XGAIN13 : REAL := 0.0;
	XGAIN14 : REAL := 0.0;
	XGAIN15 : REAL := 0.0;
	XGAIN16 : REAL := 0.0;
	XGAIN17 : REAL := 0.0;
	XGAIN18 : REAL := 0.0;
	XGAIN19 : REAL := 0.0;
	XGAIN20 : REAL := 0.0;
	YGAIN1 : REAL := 0.0;
	YGAIN2 : REAL := 0.0;
	YGAIN3 : REAL := 0.0;
	YGAIN4 : REAL := 0.0;
	YGAIN5 : REAL := 0.0;
	YGAIN6 : REAL := 0.0;
	YGAIN7 : REAL := 0.0;
	YGAIN8 : REAL := 0.0;
	YGAIN9 : REAL := 0.0;
	YGAIN10 : REAL := 0.0;
	YGAIN11 : REAL := 0.0;
	YGAIN12 : REAL := 0.0;
	YGAIN13 : REAL := 0.0;
	YGAIN14 : REAL := 0.0;
	YGAIN15 : REAL := 0.0;
	YGAIN16 : REAL := 0.0;
	YGAIN17 : REAL := 0.0;
	YGAIN18 : REAL := 0.0;
	YGAIN19 : REAL := 0.0;
	YGAIN20 : REAL := 0.0;
	ZGAIN1 : REAL := 0.0;
	ZGAIN2 : REAL := 0.0;
	ZGAIN3 : REAL := 0.0;
	ZGAIN4 : REAL := 0.0;
	ZGAIN5 : REAL := 0.0;
	ZGAIN6 : REAL := 0.0;
	ZGAIN7 : REAL := 0.0;
	ZGAIN8 : REAL := 0.0;
	ZGAIN9 : REAL := 0.0;
	ZGAIN10 : REAL := 0.0;
	ZGAIN11 : REAL := 0.0;
	ZGAIN12 : REAL := 0.0;
	ZGAIN13 : REAL := 0.0;
	ZGAIN14 : REAL := 0.0;
	ZGAIN15 : REAL := 0.0;
	ZGAIN16 : REAL := 0.0;
	ZGAIN17 : REAL := 0.0;
	ZGAIN18 : REAL := 0.0;
	ZGAIN19 : REAL := 0.0;
	ZGAIN20 : REAL := 0.0;
	X_EXTRA : REAL := 0.0;
	Y_EXTRA : REAL := 0.0;
	Z_EXTRA : REAL := 0.0;
	PHI_EXTRA : REAL := 0.0;
	THETA_EXTRA : REAL := 0.0;
	PSI_EXTRA : REAL := 0.0;
	X_EXTRA_DOT : REAL := 0.0;
	Y_EXTRA_DOT : REAL := 0.0;
	Z_EXTRA_DOT : REAL := 0.0;
	PHI_EXTRA_DOT : REAL := 0.0;
	THETA_EXTRA_DOT : REAL := 0.0;
	PSI_EXTRA_DOT : REAL := 0.0;
	X_EXTRA_DDOT : REAL := 0.0;
	Y_EXTRA_DDOT : REAL := 0.0;
	Z_EXTRA_DDOT : REAL := 0.0;
	PHI_EXTRA_DDOT : REAL := 0.0;
	THETA_EXTRA_DDOT : REAL := 0.0;
	PSI_EXTRA_DDOT : REAL := 0.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>