<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="EM1500" Id="{f4d547fd-021c-4c08-9d60-b0346b71a862}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM EM1500
VAR	
	_control	: StewartControl;
	UdpIO		: UdpClient(3232258591, 50031, 50041, SIZEOF(_control), ADR(_control), SIZEOF(feedback), ADR(feedback));
	
	Pi 			: REAL := 3.141592653589793;
END_VAR

VAR_INPUT
	control		: StewartControl;
END_VAR

VAR_OUTPUT
	feedback	: StewartFeedback;
END_VAR





	


]]></Declaration>
    <Implementation>
      <ST><![CDATA[

// Assign control to local _control
_control.CMND := control.CMND;

// Addd maximum limit to udp input _control
_control.X_EXTRA 		:= LIMIT(-0.3, control.X_EXTRA, 0.3);
_control.Y_EXTRA 		:= LIMIT(-0.3, control.Y_EXTRA, 0.3);
_control.Z_EXTRA 		:= LIMIT(-0.3, control.Z_EXTRA, 0.3);

_control.PSI_EXTRA 		:= LIMIT(-10.0/180.0*Pi, control.PSI_EXTRA, 10.0/180.0*Pi);
_control.THETA_EXTRA 	:= LIMIT(-10.0/180.0*Pi, control.THETA_EXTRA, 10.0/180.0*Pi);
_control.PHI_EXTRA 		:= LIMIT(-10.0/180.0*Pi, control.PHI_EXTRA, 10.0/180.0*Pi);


_control.COUNT 			:= _control.COUNT + 1;


UdpIO();


]]></ST>
    </Implementation>
    <LineIds Name="EM1500">
      <LineId Id="91" Count="7" />
      <LineId Id="135" Count="0" />
      <LineId Id="100" Count="11" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>